# litellm-vuln-scanner

./: .gitignore  README.md  pyproject.toml
src/litellm_vuln_scanner/: dependency_parser.py  github_client.py  local_scanner.py  reporter.py  scanner.py
src/litellm_vuln_scanner/threats/: __init__.py  base.py  data_driven.py  threats.json
src/vuln_scanner/: dependency_parser.py  github_client.py  local_scanner.py  reporter.py  scanner.py
src/vuln_scanner/threats/: __init__.py  data_driven.py
src/vuln_scanner/threats/ecosystems/: npm.py  python.py
