[project]
name = "litellm-vuln-scanner"
version = "0.1.0"
description = "LiteLLM supply chain attack scanner for GitHub repos and local environments"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
litellm-vuln-scanner = "litellm_vuln_scanner.scanner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_vuln_scanner"]
