[project]
name = "supply-chain-scanner"
version = "0.2.0"
description = "Supply chain attack scanner (LiteLLM + axios) for GitHub repos and local environments"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
supply-chain-scanner = "litellm_vuln_scanner.scanner:main"
litellm-vuln-scanner = "litellm_vuln_scanner.scanner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_vuln_scanner"]
