[project]
name = "vuln-scanner"
version = "1.0.0"
description = "Supply chain attack vulnerability scanner for GitHub repos and local environments"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
vuln-scanner = "vuln_scanner.scanner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vuln_scanner"]
